fix(ui): some dark mode fixes (#714)
* Make login screen respect system dark mode preference

* Make loading/connection interruption reflect dark mode preference

--- a/client/src/sass/tools/_themes.scss
+++ b/client/src/sass/tools/_themes.scss
@@ -33,6 +33,8 @@ $themes: (
       1px 0 colors.$action--border--hover,
       -1px 0 colors.$action--border--hover,
     ),
+    auth-form--background: colors.$light-blue,
+    loading--background: colors.$light-blue,
     torrent-view--background: #e9eef2,
     torrent-list--background: #fff,
     torrent-list--border: -1px 0 0 0 rgba(colors.$sidebar--background, 0.15),
@@ -86,6 +88,9 @@ $themes: (
       0 0 30px rgba(#1a2f3d, 0.2),
       0 0 0 1px rgba(#1a2f3d, 0.1),
     ),
+    panel--background: colors.$white,
+    panel--border: 1px solid colors.$grey--lighter,
+    panel--foreground: inherit,
     progress-bar--fill: colors.$green,
     progress-bar--fill--checking: #8899a8,
     progress-bar--fill--completed: colors.$blue,
@@ -126,6 +131,8 @@ $themes: (
       0px,
       0px,
     ),
+    auth-form--background: colors.$background,
+    loading--background: colors.$background,
     torrent-view--background: colors-dark.$md-surface-dark-e08,
     torrent-list--background: colors-dark.$md-surface-dark,
     torrent-list--border: -1px 0 0 0 rgba(colors.$sidebar--background, 0.15),
@@ -179,6 +186,9 @@ $themes: (
       0 0 30px rgba(#1a2f3d, 0.2),
       0 0 0 1px rgba(#1a2f3d, 0.1),
     ),
+    panel--background: colors.$another-grey,
+    panel--border: 1px solid colors.$dark-grey--light,
+    panel--foreground: color.adjust(#6c7e92, $lightness: 6%),
     progress-bar--fill: colors.$green,
     progress-bar--fill--checking: #8899a8,
     progress-bar--fill--completed: colors.$blue,
